--- a/src/main/webapp/WEB-INF/templates/default.xhtml
+++ b/src/main/webapp/WEB-INF/templates/default.xhtml
@@ -7,6 +7,9 @@
     <title>Email Engine Admin</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <h:outputStylesheet name="css/screen.css" />
+    
+    <h:outputScript name="js/paginate.js" />
+    
 </h:head>
 <h:body>
     <div id="container">
