--- a/src/main/webapp/resources/css/screen.css
+++ b/src/main/webapp/resources/css/screen.css
@@ -1,3 +1,11 @@
+.addNewTable{
+width:100%;	
+}
+.input-container{
+float: left;
+width:100%;
+padding: 0px 20px 0px 0px;
+}
 
 body {
   margin: 0;
@@ -68,7 +76,7 @@ h1 {
   font-size: 2.25em;
 }
 h2 {
-  font-size: 1em;
+  font-size: 1.5em;
 }
 h3 {
   color:#243446;
@@ -85,7 +93,7 @@ span.invalid {
   color: red;
 }
 form {
-  padding: 1px 25px;
+  padding: 1px 0px;
   font: 80%/1 sans-serif;
   width: 100%;
   border: 1px solid #D5D5D5;
@@ -97,12 +105,17 @@ label {
   margin-right: 0.5em;
   padding-top: 0.2em;
   text-align: right;
+  font-size: 16px;
   font-weight: bold;
   color:#363636;
 }
 input {
   margin-bottom: 8px;
-  width: 75%;
+  width: 85%;
+}
+textarea {
+  width: 85%;
+  height: 500px;
 }
 .register {
   float: left;
