--- a/src/main/webapp/resources/css/screen.css
+++ b/src/main/webapp/resources/css/screen.css
@@ -4,7 +4,7 @@ width:100%;
 .input-container{
 float: left;
 width:100%;
-padding: 0px 20px 0px 0px;
+padding: 0px 50px 0px 0px;
 }
 
 body {
@@ -93,29 +93,30 @@ span.invalid {
   color: red;
 }
 form {
-  padding: 1px 0px;
+  padding: 1px 10px;
   font: 80%/1 sans-serif;
-  width: 100%;
-  border: 1px solid #D5D5D5;
+  width: 90%;
+  border: 2px solid #D5D5D5;
 }
 label {
   float: left;
-  width: 15%;
   margin-left: 20px;
   margin-right: 0.5em;
   padding-top: 0.2em;
   text-align: right;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: bold;
   color:#363636;
 }
 input {
   margin-bottom: 8px;
-  width: 85%;
+  width: 500px;
+  float: left;
 }
 textarea {
-  width: 85%;
+  width: 500px;
   height: 500px;
+  float: left;
 }
 .register {
   float: left;
