--- a/src/main/webapp/resources/css/screen.css
+++ b/src/main/webapp/resources/css/screen.css
@@ -107,7 +107,7 @@ label {
   margin-left: 20px;
   margin-right: 0.5em;
   padding-top: 0.2em;
-  text-align: right;
+  text-align: left;
   font-size: 14px;
   font-weight: bold;
   color:#363636;
