--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -6,7 +6,7 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
-        <dependent-module archiveName="EmailEngineCore.jar" deploy-path="/WEB-INF/lib" handle="module:/classpath/lib/C:/Users/DLubin.DEV/Documents/ExportedWARs/EmailEngineCore.jar">
+        <dependent-module archiveName="EmailEngineCore.jar" deploy-path="/WEB-INF/lib" handle="module:/classpath/lib/C:/Users/Dan/Documents/ExportedWARs/EmailEngineCore.jar">
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <property name="context-root" value="EmailEngineAdmin"/>
