--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -5,6 +5,18 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <dependent-module archiveName="mysql-connector-java-5.1.29-bin.jar" deploy-path="/WEB-INF/lib" handle="module:/classpath/lib/C:/Users/Dan/Documents/Jars/mysql-connector-java-5.1.29/mysql-connector-java-5.1.29-bin.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="sqljdbc4.jar" deploy-path="/WEB-INF/lib" handle="module:/classpath/lib/C:/Users/Dan/Documents/Jars/sqljdbc4.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="postgresql-9.3-1100.jdbc4.jar" deploy-path="/WEB-INF/lib" handle="module:/classpath/lib/C:/Users/Dan/Documents/Jars/postgresql-9.3-1100.jdbc4.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="EmailEngineCore.jar" deploy-path="/WEB-INF/lib" handle="module:/classpath/lib/C:/Users/Dan/Documents/ExportedWARs/EmailEngineCore.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="EmailEngineAdmin"/>
         <property name="java-output-path" value="/EmailEngineAdmin/target/classes"/>
     </wb-module>
